--- a/4-ml.tex
+++ b/4-ml.tex
@@ -621,6 +621,8 @@ It would be possible to improve the simulations at the cost of CPU times, if we 
 \vspace{2cm}
 \todo{Transition to next chapter}
 
+\section{Beyond thermodynamic considerations}
+
 \textbf{Data Availability:} \url{} \todo{create a repo github with the different models and data}
 
 \OnlyInSubfile{\printglobalbibliography}
