--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -26,7 +26,7 @@ Since the pollen motion observations of the botannist Brown in 1826, scientists 
   \frac{\partial \phi}{\partial t} = D_x \frac{\partial^2 \phi}{{\partial x}^2}
 \end{equation}
 
-To better understand the brownian motion of suspended particles on a liquid Einstein derived a microscopic model of the diffusion motion based on the molecular-kinetic theory of heat on the miraculous year of 1905.\autocite{einstein1905motion} To determine the so-called self-diffusion coefficient, he followed the motion of a particle assumed independent from other particles and time steps large enough to consider mutually independent two consecutive motions.  By using the particle distribution of $N$ independent diffusing particle, he redefined the diffusion coefficient as a function of the mean squared displacement (MSD) of a particle. In a tridimensional space, we have the following Einstein relation:
+To better understand the brownian motion of suspended particles on a liquid Einstein derived a microscopic model of the diffusion motion based on the molecular-kinetic theory of heat on the miraculous year of 1905.\autocite{einstein1905motion} To determine the so-called self-diffusion coefficient (in the following development we will use ``diffusion coefficient'' for short), he followed the motion of a particle assumed independent from other particles and time steps large enough to consider mutually independent two consecutive motions. By using the particle distribution of $N$ independent diffusing particle, he redefined the diffusion coefficient as a function of the mean squared displacement (MSD) of a particle. In a tridimensional space, we have the following Einstein relation:
 \begin{equation}\label{eq:einstein}
   \langle {r(t)}^2 \rangle = 2dD\e{diff}t = 6D\e{diff}t
 \end{equation}
@@ -131,7 +131,7 @@ In practice, we need to calculate an energy grid that will be used to detect all
 This approach is very promising since it is much more efficient than the MD simulation based techniques. With an implementation in Matlab (not very computationally efficient), the code is already out-performing most of the MD simulations for diffsuion coefficient calculation, with a minimal cost in accuracy as shown in their screening of diffusion coefficients in zeolites. By using the C++ programming language, I tried to rewrite the algorithm for a more efficient search of the transition states. At this point of the development, I stopped at the determination of the diffusion activation energy which is independent of the detection of the transition state. And, in section~\ref{sct:algo_diff}, I will give the algorithmic detail for the determination of the diffusion activation energy in nanoporous mateirals using our in-house algorithm as well as the projected development to achieve a faster lattice kinetic Monte Carlo simulation inspired by the TuTraST algorithm.
 
 
-\section{Screening of transport properties}\label{sct:md_screening}
+\section{Self-diffusion screening}\label{sct:md_screening}
 
 To complete the thermodynamic screenings that we performed in the chapters 2--4, we also carried out a transport property screening. In this section, we will provide a description of the screening approach as well as the analysis of the diffusion coefficients compared with typical geometrical descriptors.
 
@@ -546,7 +546,7 @@ Not to learn form false data, we need to clean the dataset to remove structures 
 
 
 
-\subsection{Next steps}
+\section{Beyond self-diffusion screenings}
 
 In this chapter, I introduced different methods of evaluating the transport properties of an adsorbate inside a nanoporous material. The most accurate method requires much more computational time and personal attention to achieve the best accuracy. For instance, we need to choose carefully the parameters of the MD simulation so that we obtain a mean square displacement data relevant for diffusion coefficient calculation. We managed to perform a screening of diffusion coefficient values for xneon and krypton to find interesting materials that exhibit both good thermodynamic and kinetic separation performance. These values have also been used to serve as a baseline data to test out other methods such as the activation energy detection and an ML model. The final ML model seems to give very promising performance by achieving a root mean square error of only $0.25$ \todo{recheck} on the base-10 logarithm of the diffusion coefficient. This means that we can evaluate quite accurately the order of magnitude of the diffusion properties. This could help quickly identify possible diffusion limitations of a promising material, but also optimize this property for faster equilibration in an adsoprtion based separation. Beyond our study, the techniques developed and to be developed in my work can also apply to membrane separation processes.
 
@@ -554,11 +554,10 @@ Different follow-up studies can be initiated considering the results obtained. F
 
 To go beyond standard studies, we can even use the diffusion coefficeint to model the breakthrough experiments which is the closest a lab experiment can get from the industrial adsorption process. The recent development of the RUPTURA software,\autocite{Sharma_2023} enables much more perspectives in the field of modeling. We can for instance calculate the axial dispersion coefficient used in a breakthrough model using transport properties while also injecting the thermodynamic data we have on the adsorption process of xenon and krypton. This gives a real opportunity for experiment-theory comparison in order to start a virtuous feedback loop to improve modeling and help in discovring better materials. 
 
-\todo{Broaden to the study of collective diffusion, Maxwell-stefan, Onsager, etc.}
+The diffusion coefficient calculated by the above-mentioned methodologies are by definition only describing a self-diffusion in an infinitely diluted environment. To better describe the transport properties in industrial conditions, we need to study the diffusion coefficients in a higher loading environment to take account of host--host interactions. Furthermore, we can also directly run mixture simulations to retrieve the so-called Onsager diffusion coefficients that are based on the Maxwell-Stefan diffusion equation rather than the Fick's equation.\autocite{Krishna_2008} The calculation of such quantities requires a lot of computational resources since we need to run MD simulations on mixtures at a rather high loading and for long enough in order to capture the diffusion regime. It is therefore unimaginable to apply it in a large-scale screening, but we could consider testing some interesting materials in order to study the mixture and loading effect on the transport properties.
 
-Here, I presented one aspect that was not taken into account in standard high-throughput screenings for xenon/krypton separation, which is the transport properties. In the next chapter, we will focus on other effects that could help complete the picture in order to be closer to the experimental system. The flexibility of the nanoporous framework can for instance change the adsorption performances.\autocite{Witman_2017} And, the difference in polarizability of xenon and krypton can be better leveraged in the screening procedure if we can properly model it using more high-level theories than the Lennard-Jones potential. Both of these subjects are still at level projects and some results will be presented, but it is mainly a compilation of possible research focuses and solutions that could be brought. 
+In this chapter, I only presented one aspect that was not taken into account in standard high-throughput screenings for xenon/krypton separation, which is the transport properties. In the next chapter, we will focus on other effects that could help complete the picture in order to be closer to the experimental system. The flexibility of the nanoporous framework can for instance change the adsorption performances.\autocite{Witman_2017} And, the difference in polarizability of xenon and krypton can be better leveraged in the screening procedure if we can properly model it using more high-level theories than the Lennard-Jones potential. Both the flexibility and the polarization are still at the project stage and some results will be presented, but it is mainly a compilation of possible research focuses and solutions that could improve our current understanding. 
 
 \OnlyInSubfile{\printglobalbibliography}
 
 \end{document}
-
