--- a/thesis.bib
+++ b/thesis.bib
@@ -3708,3 +3708,29 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {Measuring tortuosity of the intracerebral vasculature from {MRA} images},
 	journal = {IEEE Trans. Med. Imaging}
 }
+@article{Krishna_2008,
+	doi = {10.1016/j.ces.2008.03.017},
+	url = {https://doi.org/10.1016%2Fj.ces.2008.03.017},
+	year = 2008,
+	month = {jun},
+	publisher = {Elsevier {BV}},
+	volume = {63},
+	number = {12},
+	pages = {3120--3140},
+	author = {R. Krishna and J.M. van Baten},
+	title = {Onsager coefficients for binary mixture diffusion in nanopores},
+	journal = {Chemical Engineering Science}
+}
+@article{VESTA,
+	doi = {10.1107/s0021889811038970},
+	url = {https://doi.org/10.1107%2Fs0021889811038970},
+	year = 2011,
+	month = {oct},
+	publisher = {International Union of Crystallography ({IUCr})},
+	volume = {44},
+	number = {6},
+	pages = {1272--1276},
+	author = {Koichi Momma and Fujio Izumi},
+	title = {\textit{VESTA 3} three-dimensional visualization of crystal, volumetric and morphology data},
+	journal = {J Appl Cryst}
+}
